# diyivi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
client/: .env  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.vue
client/src/api/: index.ts  schema.d.ts  types.ts
client/src/assets/: index.css
client/src/components/: AttributeList.vue  ConfirmationDialog.vue  Header.vue  Navbar.vue  PlainMessageDisplay.vue  RawLinkDisplay.vue  RequestedAttributeList.vue  Title.vue
client/src/components/icons/: WhatsApp.vue
client/src/components/navbar/: Navbar.vue
client/src/lib/: attributes.ts  keys.ts  utils.ts
client/src/router/: index.ts
client/src/views/: AboutView.vue  ExchangeCreateView.vue  ExchangeRespondView.vue  ExchangeStartView.vue  HomeView.vue  InitiatorExchangeView.vue
client/src/views/exchange/: InitiatorView.vue  RespondView.vue  ResponseDisclosureView.vue
client/src/views/exchange/initiator/: CreateView.vue  ResultView.vue  SendView.vue  StartView.vue
client/src/views/signature/: CreateSignatureView.vue  CreateView.vue  RequestSignatureView.vue  RespondSignatureView.vue  ResultView.vue  SignView.vue  VerifySignatureView.vue
client/src/views/signature/create/: CreateView.vue  ResultView.vue  SignView.vue
client/src/views/signature/request/: CreateView.vue  SendView.vue  StartView.vue
client/src/views/signature/respond/: ResultView.vue  SignView.vue
docs/: README.md  exchanges.md  signatures.md
infra/: docker-compose.yaml  irmaserver_private.pem  irmaserver_public.pem
infra/nginx/: Dockerfile  diyivi.conf.template
infra/server/: Dockerfile
server/: README.md  demo.py  main.py  pyproject.toml
server/app/: config.py  dependencies.py  main.py  models.py  utils.py
server/app/exchanges/: api.py  dependencies.py  email.py  models.py  utils.py
server/app/exchanges/tests/: test_api.py
server/app/signatures/: api.py  dependencies.py  email.py  models.py
server/app/yivi/: models.py  utils.py
server/app/yivi/tests/: test_models.py
